--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,2 +1,81 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
+
+@import url(../blocks/layout/layout.css);
+@import url(../blocks/page/page.css);
+
+@import url(../blocks/header/header.css);
+
+@import url(../blocks/list/list.css);
+
+@import url(../blocks/menu/menu.css);
+
+@import url(../blocks/link/link.css);
+
+@import url(../blocks/paragraph/paragraph.css);
+
+@import url(../blocks/menu-list/menu-list.css);
+@import url(../blocks/menu-list/__item/menu-list__item.css);
+@import url(../blocks/menu-list/__link/menu-list__link.css);
+@import url(../blocks/menu-list/__link/_active/menu-list__link_active.css);
+
+@import url(../blocks/header-container/header-container.css);
+@import url(../blocks/header-container/__heading/header-container__heading.css);
+@import url(../blocks/header-container/__paragraph/header-container__paragraph.css);
+
+@import url(../blocks/heading/heading.css);
+@import url(../blocks/heading/_style/heading_style_title.css);
+@import url(../blocks/heading/_style/heading_style_subtitle.css);
+
+@import url(../blocks/btn/btn.css);
+@import url(../blocks/btn/_style/btn_style_primary.css);
+
+@import url(../blocks/explanation/explanation.css);
+
+@import url(../blocks/main-image/main-image.css);
+
+@import url(../blocks/main/main.css);
+
+@import url(../blocks/section/section.css);
+@import url(../blocks/section/_type/section_type_quote.css);
+@import url(../blocks/section/_type/section_type_highway.css);
+@import url(../blocks/section/_type/section_type_bicycles.css);
+@import url(../blocks/section/_type/section_type_training.css);
+
+@import url(../blocks/image/image.css);
+
+@import url(../blocks/author/author.css);
+
+@import url(../blocks/profession/profession.css);
+
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__list/gallery__list.css);
+@import url(../blocks/gallery/__item/gallery__item.css);
+@import url(../blocks/gallery/__img/gallery__img.css);
+@import url(../blocks/gallery/__btn/gallery__btn.css);
+@import url(../blocks/gallery/__btn/_style/gallery__btn_style_prev.css);
+@import url(../blocks/gallery/__btn/_style/gallery__btn_style_next.css);
+
+@import url(../blocks/links-list/links-list.css);
+@import url(../blocks/links-list/__item/links-list__item.css);
+@import url(../blocks/links-list/__link/_active/links-list__link_active.css);
+
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__img/cards__img.css);
+@import url(../blocks/cards/__title/cards__title.css);
+
+@import url(../blocks/footer/footer.css);
+
+@import url(../blocks/subscription/subscription-form.css);
+@import url(../blocks/subscription/__input/subscription__input.css);
+@import url(../blocks/subscription/__btn/subscription__btn.css);
+
+@import url(../blocks/copyright/copyright.css);
+
+@import url(../blocks/theme-switcher/theme-switcher.css);
+@import url(../blocks/theme-switcher/__label/theme-switcher__label.css);
+@import url(../blocks/theme-switcher/__input/theme-switcher__input.css);
+@import url(../blocks/theme-switcher/__input/_checked/theme-switcher__input_checked.css);
+
+/*@import url(../blocks/);*/
