Добавлен блок Шоссе

--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -1,3 +1,10 @@
 .author {
-
+  color: #151515;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  margin: 0;
+  padding-left: 80px;
+  display: flex;
 }
