--- a/src/blocks/heading/_style/heading_style_subtitle.css
+++ b/src/blocks/heading/_style/heading_style_subtitle.css
@@ -1,3 +1,10 @@
 .heading_style_subtitle {
-
+  color: #151515;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  line-height: 44px;
+  max-width: 470px;
+  padding-left: 80px;
 }
