--- a/src/blocks/profession/profession.css
+++ b/src/blocks/profession/profession.css
@@ -1,3 +1,11 @@
 .profession {
-
+  color: #222222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  margin: 0;
+  opacity: 0.7;
+  padding-left: 80px;
+  display: flex;
 }
