--- a/src/blocks/section/_type/section_type_quote.css
+++ b/src/blocks/section/_type/section_type_quote.css
@@ -1,3 +1,5 @@
 .section_type_quote {
-
+  display: grid;
+  grid-template-columns: repeat(2, minmax(min-content, max-content));
+  grid-template-rows: repeat(2, minmax(min-content, max-content));
 }
