--- a/src/blocks/links-list/__link/links-list__link.css
+++ b/src/blocks/links-list/__link/links-list__link.css
@@ -1,3 +1,13 @@
 .links-list__link {
-  
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: right;
+  color: #222222;
+  opacity: 0.7;
+}
+
+.links-list__link:hover {
+  opacity: .6;
 }
