--- a/src/blocks/links-list/links-list.css
+++ b/src/blocks/links-list/links-list.css
@@ -1,3 +1,8 @@
 .links-list {
-  
+  justify-self: end;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  column-gap: 40px;
+  align-items: flex-end;
 }
