--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,7 @@
 @import url(../blocks/link/link.css);
 
 @import url(../blocks/paragraph/paragraph.css);
+@import url(../blocks/paragraph/_position/paragraph_position_highway.css);
 
 @import url(../blocks/menu-list/menu-list.css);
 @import url(../blocks/menu-list/__item/menu-list__item.css);
@@ -26,6 +27,8 @@
 @import url(../blocks/heading/heading.css);
 @import url(../blocks/heading/_style/heading_style_title.css);
 @import url(../blocks/heading/_style/heading_style_subtitle.css);
+@import url(../blocks/heading/_position/heading_position_highway.css);
+@import url(../blocks/heading/_position/heading_position_bicycles.css);
 
 @import url(../blocks/btn/btn.css);
 @import url(../blocks/btn/_style/btn_style_primary.css);
@@ -33,6 +36,8 @@
 @import url(../blocks/explanation/explanation.css);
 
 @import url(../blocks/main-image/main-image.css);
+
+@import url(../blocks/origin/origin.css);
 
 @import url(../blocks/main/main.css);
 
@@ -43,6 +48,7 @@
 @import url(../blocks/section/_type/section_type_training.css);
 
 @import url(../blocks/image/image.css);
+@import url(../blocks/image/_position/image_position_quote.css);
 
 @import url(../blocks/author/author.css);
 
@@ -55,6 +61,8 @@
 @import url(../blocks/gallery/__btn/gallery__btn.css);
 @import url(../blocks/gallery/__btn/_style/gallery__btn_style_prev.css);
 @import url(../blocks/gallery/__btn/_style/gallery__btn_style_next.css);
+@import url(../blocks/gallery/__navbar/gallery__navbar.css);
+@import url(../blocks/gallery/__navbar-item/gallery__navbar-item.css);
 
 @import url(../blocks/links-list/links-list.css);
 @import url(../blocks/links-list/__item/links-list__item.css);
