--- a/src/blocks/copyright/copyright.css
+++ b/src/blocks/copyright/copyright.css
@@ -1,3 +1,8 @@
 .copyright {
-
+  color: #CFCFCF;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  padding-top: 100px;
 }
