--- a/src/blocks/section/_type/section_type_training.css
+++ b/src/blocks/section/_type/section_type_training.css
@@ -1,3 +1,6 @@
 .section_type_training {
-
+  display: grid;
+  grid-template-columns: auto max-content;
+  grid-template-rows: 110px repeat(2, auto);
+  max-height: 460px;
 }
