--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -1,3 +1,8 @@
 .cards {
+  column-gap: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   grid-column: 1 / -1;
+  padding-top: 120px;
 }
