--- a/src/blocks/heading/heading.css
+++ b/src/blocks/heading/heading.css
@@ -1,5 +1,10 @@
 .heading {
+  color: #151515;
   font-style: normal;
   margin: 0;
   padding: 0 0 50px 0;
+}
+
+.layout_theme_dark .heading {
+  color: #fff;
 }
