--- a/src/blocks/theme-switcher/theme-switcher.css
+++ b/src/blocks/theme-switcher/theme-switcher.css
@@ -1,3 +1,10 @@
 .theme-switcher {
-  
+  align-items: center;
+  bottom: 66px;
+  column-gap: 22px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  position: absolute;
+  right: 122px;
 }
