--- a/src/blocks/btn/_style/btn_style_primary.css
+++ b/src/blocks/btn/_style/btn_style_primary.css
@@ -1,14 +1,42 @@
 .btn_style_primary {
-  background: #24B47E;
   border-radius: 4px;
+  box-sizing: border-box;
   color: #fff;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
   letter-spacing: 1px;
   line-height: 18px;
-  padding: 16px 10px;
-  min-width: 160px;
   max-width: min-content;
-  box-sizing: border-box;
+  min-width: 180px;
+  overflow: hidden;
+  padding: 16px 10px;
+  position: relative;
+}
+
+.btn_style_primary::before {
+  content: '';
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  z-index: -2;
+  background: #24B47E;
+}
+
+.btn_style_primary::after {
+  background: #319E75;
+  content: '';
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  width: 0;
+  z-index: -1;
+  transition: width .25s ease-in-out;
+}
+
+.btn_style_primary:hover::after {
+  width: 100%;
 }
