--- a/src/blocks/cards/__title/cards__title.css
+++ b/src/blocks/cards/__title/cards__title.css
@@ -5,5 +5,9 @@
   font-weight: 600;
   line-height: 22px;
   margin: 0;
-  padding: 22px 0 0 0;
+  padding: 22px 0 0 6px;
+}
+
+.layout_theme_dark .cards__title {
+  color: #fff;
 }
