--- a/src/blocks/gallery/gallery.css
+++ b/src/blocks/gallery/gallery.css
@@ -1,7 +1,9 @@
 .gallery {
   box-sizing: border-box;
+  column-gap: 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   overflow: hidden;
   padding: 80px 0 50px 120px;
-  display: flex;
-  flex-direction: column;
 }
