--- a/src/blocks/slider/__btn/_style/slider__btn_style_next.css
+++ b/src/blocks/slider/__btn/_style/slider__btn_style_next.css
@@ -1,7 +1,7 @@
-.gallery__btn_style_next {
+.slider__btn_style_next {
   background: url(../../../../images/btn-nav-next-icon.svg) no-repeat center center, #EBEBEB;
 }
 
-.layout_theme_dark .gallery__btn_style_next {
+.layout_theme_dark .slider__btn_style_next {
   background: url(../../../../images/btn-nav-next-icon-dark-theme.svg) no-repeat center center, #434343;
 }
