--- a/src/blocks/theme-switcher/__state-icon/_style/theme-switcher__state-icon_style_bright.css
+++ b/src/blocks/theme-switcher/__state-icon/_style/theme-switcher__state-icon_style_bright.css
@@ -1,3 +1,7 @@
 .theme-switcher__state-icon_style_bright {
   background: url(../../../../images/theme-switcher-bright-icon.svg) no-repeat center center;
 }
+
+.layout_theme_dark .theme-switcher__state-icon_style_bright {
+  background: url(../../../../images/theme-switcher-bright-icon-theme-dark.svg) no-repeat center center;
+}
