--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,7 @@
 @import url(../blocks/link/link.css);
 
 @import url(../blocks/paragraph/paragraph.css);
-@import url(../blocks/paragraph/_position/paragraph_position_highway.css);
+@import url(../blocks/paragraph/_position/paragraph_position_covering.css);
 
 @import url(../blocks/menu-list/menu-list.css);
 @import url(../blocks/menu-list/__item/menu-list__item.css);
@@ -29,7 +29,8 @@
 @import url(../blocks/heading/heading.css);
 @import url(../blocks/heading/_style/heading_style_title.css);
 @import url(../blocks/heading/_style/heading_style_subtitle.css);
-@import url(../blocks/heading/_position/heading_position_highway.css);
+@import url(../blocks/heading/_style/heading_style_form-title.css);
+@import url(../blocks/heading/_position/heading_position_covering.css);
 @import url(../blocks/heading/_position/heading_position_bicycles.css);
 @import url(../blocks/heading/_position/heading_position_footer.css);
 
@@ -46,7 +47,7 @@
 
 @import url(../blocks/section/section.css);
 @import url(../blocks/section/_type/section_type_quote.css);
-@import url(../blocks/section/_type/section_type_highway.css);
+@import url(../blocks/section/_type/section_type_covering.css);
 @import url(../blocks/section/_type/section_type_bicycles.css);
 @import url(../blocks/section/_type/section_type_training.css);
 
@@ -59,14 +60,22 @@
 @import url(../blocks/profession/profession.css);
 
 @import url(../blocks/gallery/gallery.css);
-@import url(../blocks/gallery/__list/gallery__list.css);
 @import url(../blocks/gallery/__item/gallery__item.css);
+@import url(../blocks/gallery/__item/_label/gallery__item_label_highway.css);
+@import url(../blocks/gallery/__item/_label/gallery__item_label_gravel.css);
+@import url(../blocks/gallery/__item/_label/gallery__item_label_tt.css);
 @import url(../blocks/gallery/__img/gallery__img.css);
-@import url(../blocks/gallery/__btn/gallery__btn.css);
-@import url(../blocks/gallery/__btn/_style/gallery__btn_style_prev.css);
-@import url(../blocks/gallery/__btn/_style/gallery__btn_style_next.css);
-@import url(../blocks/gallery/__navbar/gallery__navbar.css);
-@import url(../blocks/gallery/__navbar-item/gallery__navbar-item.css);
+
+@import url(../blocks/slider/slider.css);
+@import url(../blocks/slider/__slide/slider__slide.css);
+@import url(../blocks/slider/__slide/_type/slider__slide_type_highway.css);
+@import url(../blocks/slider/__slide/_type/slider__slide_type_gravel.css);
+@import url(../blocks/slider/__slide/_type/slider__slide_type_tt.css);
+@import url(../blocks/slider/__btn/slider__btn.css);
+@import url(../blocks/slider/__btn/_style/slider__btn_style_prev.css);
+@import url(../blocks/slider/__btn/_style/slider__btn_style_next.css);
+@import url(../blocks/slider/__navbar/slider__navbar.css);
+@import url(../blocks/slider/__navbar-item/slider__navbar-item.css);
 
 @import url(../blocks/links-list/links-list.css);
 @import url(../blocks/links-list/__item/links-list__item.css);
@@ -76,6 +85,7 @@
 @import url(../blocks/links-list/_position/links-list_position_training.css);
 
 @import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/_opened/cards_opened.css);
 @import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__img-container/cards__img-container.css);
 @import url(../blocks/cards/__img/cards__img.css);
