--- a/src/blocks/section/_type/section_type_quote.css
+++ b/src/blocks/section/_type/section_type_quote.css
@@ -3,3 +3,9 @@
   grid-template-columns: repeat(2, minmax(min-content, max-content));
   grid-template-rows: repeat(2, minmax(min-content, max-content));
 }
+
+@media screen and (max-width: 1200px) {
+  .section_type_quote {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
