--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -12,3 +12,11 @@
 .layout_theme_dark .author {
   color: #fff;
 }
+
+@media screen and (max-width: 1200px) {
+  .author {
+    padding-left: 40px;
+    font-size: 16px;
+    line-height: 30px;
+  }
+}
