--- a/src/blocks/header-container/header-container.css
+++ b/src/blocks/header-container/header-container.css
@@ -9,3 +9,19 @@
   padding: 80px 0 80px 120px;
   position: relative;
 }
+
+@media screen and (max-width: 1200px) {
+  .header-container {
+    min-height: 450px;
+    max-height: 650px;
+    background-size: contain;
+    padding: 80px 0 60px 100px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .header-container {
+    max-height: 200px;
+    padding: 40px 0 40px 60px;
+  }
+}
