--- a/src/blocks/heading/_style/heading_style_subtitle.css
+++ b/src/blocks/heading/_style/heading_style_subtitle.css
@@ -7,3 +7,19 @@
   max-width: 470px;
   padding-left: 80px;
 }
+
+@media screen and (max-width: 1200px) {
+  .heading_style_subtitle {
+    font-size: 28px;
+    line-height: 36px;
+    padding-left: 40px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .heading_style_subtitle {
+    font-size: 24px;
+    line-height: 30px;
+    padding-left: 40px;
+  }
+}
