--- a/src/blocks/main-image/main-image.css
+++ b/src/blocks/main-image/main-image.css
@@ -2,9 +2,22 @@
   background: url(../../images/main-image.svg) no-repeat center center, #F4F4F4;
   border-radius: 20px;
   box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
-  height: 300px;
+  height: 100%;
+  max-height: 300px;
   position: absolute;
-  width: 440px;
+  width: 100%;
+  max-width: 440px;
   right: 370px;
   bottom: 164px;
+}
+
+@media screen and (max-width: 1200px) {
+  .main-image {
+    max-width: 300px;
+    max-height: 200px;
+    background-size: 70%;
+    right: auto;
+    left: 45%;
+    bottom: 50px;
+  }
 }
