--- a/src/blocks/menu/menu.css
+++ b/src/blocks/menu/menu.css
@@ -10,6 +10,7 @@
   z-index: 1;
   margin: 0 auto;
   max-width: 1440px;
+  transition: background-color .2s linear;
 }
 
 .layout_theme_dark .menu {
