--- a/src/blocks/section/section.css
+++ b/src/blocks/section/section.css
@@ -2,3 +2,15 @@
   display: flex;
   padding: 60px 120px 60px 120px;
 }
+
+@media screen and (max-width: 1200px) {
+  .section {
+    padding: 40px 100px 40px 100px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .section {
+    padding: 30px 60px 30px 60px;
+  }
+}
