--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,8 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 
+@import url(../blocks/scroll/scroll.css);
+
 @import url(../blocks/layout/layout.css);
 @import url(../blocks/layout/_theme/layout_theme_dark.css);
 
