--- a/src/blocks/gallery/__img/gallery__img.css
+++ b/src/blocks/gallery/__img/gallery__img.css
@@ -1,11 +1,11 @@
 .gallery__img {
   aspect-ratio: 6.5 / 4;
   object-fit: cover;
-  width: 650px;
+  width: 100%;
+  max-width: 650px;
 }
 
 @media screen and (max-width: 1400px) {
   .gallery__img {
-    max-width: 500px;
   }
 }
