--- a/src/blocks/heading/_position/heading_position_covering.css
+++ b/src/blocks/heading/_position/heading_position_covering.css
@@ -1,3 +1,16 @@
 .heading_position_covering {
   padding-left: 120px;
 }
+
+@media screen and (max-width: 1200px) {
+  .heading_position_covering {
+    padding-left: 100px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .heading_position_covering {
+    padding-left: 0;
+    padding-top: 20px;
+  }
+}
