--- a/src/blocks/heading/_style/heading_style_subtitle.css
+++ b/src/blocks/heading/_style/heading_style_subtitle.css
@@ -18,8 +18,8 @@
 
 @media screen and (max-width: 900px) {
   .heading_style_subtitle {
-    font-size: 24px;
-    line-height: 30px;
-    padding-left: 40px;
+    font-size: 23px;
+    line-height: 29px;
+    padding: 0;
   }
 }
