--- a/src/blocks/main-image/main-image.css
+++ b/src/blocks/main-image/main-image.css
@@ -9,6 +9,7 @@
   max-width: 440px;
   right: 370px;
   bottom: 164px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1200px) {
@@ -19,5 +20,14 @@
     right: auto;
     left: 45%;
     bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .main-image {
+    position: static;
+    width: 234px;
+    height: 160px;
+    order: 2;
   }
 }
