--- a/src/blocks/menu-list/__link/menu-list__link.css
+++ b/src/blocks/menu-list/__link/menu-list__link.css
@@ -13,3 +13,9 @@
 .layout_theme_dark .menu-list__link {
   color: #fff;
 }
+
+@media screen and (max-width: 900px) {
+  .menu-list__link {
+    font-size: 18px;
+  }
+}
