--- a/src/blocks/origin/origin.css
+++ b/src/blocks/origin/origin.css
@@ -4,3 +4,9 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
+@media screen and (max-width: 900px) {
+  .origin {
+    align-self: start;
+  }
+}
