--- a/src/blocks/paragraph/_position/paragraph_position_covering.css
+++ b/src/blocks/paragraph/_position/paragraph_position_covering.css
@@ -1,3 +1,15 @@
 .paragraph_position_covering {
   padding-left: 120px;
 }
+
+@media screen and (max-width: 1200px) {
+  .paragraph_position_covering {
+    padding-left: 100px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .paragraph_position_covering {
+    padding-left: 0;
+  }
+}
