--- a/src/blocks/section/_type/section_type_quote.css
+++ b/src/blocks/section/_type/section_type_quote.css
@@ -9,3 +9,11 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 900px) {
+  .section_type_quote {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+}
