--- a/src/blocks/section/_type/section_type_training.css
+++ b/src/blocks/section/_type/section_type_training.css
@@ -1,8 +1,14 @@
 .section_type_training {
   display: grid;
-  grid-template-columns: auto max-content;
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 110px repeat(2, auto);
   max-height: 460px;
   padding-bottom: 120px;
   padding-top: 150px;
+}
+
+@media screen and (max-width: 900px) {
+  .section_type_training {
+    padding: 40px 18px;
+  }
 }
