--- a/src/blocks/slider/__btn/_style/slider__btn_style_next.css
+++ b/src/blocks/slider/__btn/_style/slider__btn_style_next.css
@@ -5,3 +5,9 @@
 .layout_theme_dark .slider__btn_style_next {
   background: url(../../../../images/btn-nav-next-icon-dark-theme.svg) no-repeat center center, #434343;
 }
+
+@media screen and (max-width: 900px) {
+  .slider__btn_style_next {
+    background-size: auto 10px;
+  }
+}
