--- a/src/blocks/theme-switcher/theme-switcher.css
+++ b/src/blocks/theme-switcher/theme-switcher.css
@@ -8,3 +8,13 @@
   position: absolute;
   right: 120px;
 }
+
+@media screen and (max-width: 900px) {
+  .theme-switcher {
+    position: fixed;
+    z-index: 3;
+    bottom: 36px;
+    right: calc(50% - 66px);
+    display: none;
+  }
+}
