--- a/src/blocks/slider/__slide/slider__slide.css
+++ b/src/blocks/slider/__slide/slider__slide.css
@@ -5,5 +5,8 @@
 
 @media screen and (max-width: 900px) {
   .slider__slide {
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
   }
 }
