--- a/src/blocks/cards/__item/cards__item.css
+++ b/src/blocks/cards/__item/cards__item.css
@@ -2,3 +2,15 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 900px) {
+  .cards__item {
+    align-items: center;
+    background: #F4F4F4;
+    border-radius: 20px;
+    box-shadow: 0 20px 140px rgba(0, 0, 0, .06);
+    justify-content: center;
+    display: none;
+    padding-bottom: 16px;
+  }
+}
