--- a/src/blocks/cards/__title/cards__title.css
+++ b/src/blocks/cards/__title/cards__title.css
@@ -11,3 +11,11 @@
 .layout_theme_dark .cards__title {
   color: #fff;
 }
+
+@media screen and (max-width: 900px) {
+  .cards__title {
+    padding: 0;
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
