--- a/src/blocks/gallery/__item/_label/gallery__item_label_gravel.css
+++ b/src/blocks/gallery/__item/_label/gallery__item_label_gravel.css
@@ -7,4 +7,12 @@
   bottom: 16px;
   position: absolute;
   background: url(../../../../images/gallery-gravel-label.svg) no-repeat left center;
+  background-size: contain;
+}
+
+@media screen and (max-width: 900px) {
+  .gallery__item_label_gravel::after {
+    width: 70px;
+    height: 28px;
+  }
 }
