--- a/src/blocks/heading/_position/heading_position_covering.css
+++ b/src/blocks/heading/_position/heading_position_covering.css
@@ -10,7 +10,6 @@
 
 @media screen and (max-width: 900px) {
   .heading_position_covering {
-    padding-left: 0;
-    padding-top: 20px;
+    padding: 20px 0 0 0;
   }
 }
