--- a/src/blocks/heading/_position/heading_position_footer.css
+++ b/src/blocks/heading/_position/heading_position_footer.css
@@ -1,3 +1,9 @@
 .heading_position_footer {
   padding-left: 0;
 }
+
+@media screen and (max-width: 900px) {
+  .heading_position_footer {
+    padding-top: 20px;
+  }
+}
