--- a/src/blocks/links-list/_position/links-list_position_bicycle.css
+++ b/src/blocks/links-list/_position/links-list_position_bicycle.css
@@ -2,3 +2,9 @@
   justify-self: end;
   align-items: flex-end;
 }
+
+@media screen and (max-width: 900px) {
+  .links-list_position_bicycle {
+    display: none;
+  }
+}
