--- a/src/blocks/links-list/_position/links-list_position_training.css
+++ b/src/blocks/links-list/_position/links-list_position_training.css
@@ -2,3 +2,11 @@
   align-items: flex-end;
   column-gap: 30px;
 }
+
+@media screen and (max-width: 900px) {
+  .links-list_position_training {
+    order: 3;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+}
