--- a/src/blocks/main-image/main-image.css
+++ b/src/blocks/main-image/main-image.css
@@ -16,7 +16,7 @@
   .main-image {
     max-width: 300px;
     max-height: 200px;
-    background-size: 70%;
+    background-size: 77%;
     right: auto;
     left: 45%;
     bottom: 50px;
@@ -29,5 +29,6 @@
     width: 234px;
     height: 160px;
     order: 2;
+    box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
   }
 }
