--- a/src/blocks/header-container/header-container.css
+++ b/src/blocks/header-container/header-container.css
@@ -1,5 +1,5 @@
 .header-container {
-  background: url(../../images/header-container-bg.svg) no-repeat right bottom;
+  background: url(../../images/header-container-bg.jpg) no-repeat right bottom;
   background-size: auto 836px;
   box-sizing: border-box;
   display: flex;
@@ -20,6 +20,15 @@
 }
 
 @media screen and (max-width: 900px) {
+  .header-container {
+    padding: 40px 18px;
+    max-height: 100%;
+    background-size: 50% auto;
+    background-position: bottom 230px right 18px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .header-container {
     padding: 40px 18px;
     max-height: 100%;
