--- a/src/blocks/logo/logo.css
+++ b/src/blocks/logo/logo.css
@@ -1,8 +1,14 @@
 .logo {
-  width: 38px;
-  height: 38px;
-  position: absolute;
-  bottom: 8px;
-  right: 16px;
-  background: url(../../images/logo.svg) no-repeat center center;
+  display: none;
+}
+
+@media screen and (max-width: 900px) {
+  .logo {
+    width: 38px;
+    height: 38px;
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    background: url(../../images/logo.svg) no-repeat center center;
+  }
 }
