--- a/src/blocks/gallery/__item/gallery__item.css
+++ b/src/blocks/gallery/__item/gallery__item.css
@@ -9,8 +9,12 @@
 }
 
 @media screen and (max-width: 900px) {
+  .gallery__item {
+    width: 100%;
+  }
+
   .gallery__item:last-of-type {
-    margin-right: 0;
     display: none;
+    margin-right: 0;
   }
 }
