--- a/src/blocks/cards/__title/cards__title.css
+++ b/src/blocks/cards/__title/cards__title.css
@@ -14,8 +14,13 @@
 
 @media screen and (max-width: 900px) {
   .cards__title {
-    padding: 0;
     font-size: 14px;
     line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .cards__title {
+    padding: 0;
   }
 }
