--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -5,8 +5,9 @@
   grid-column: 1 / -1;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
   .cards {
+    margin: 0 auto;
     padding-top: 20px;
   }
 }
