--- a/src/blocks/copyright/copyright.css
+++ b/src/blocks/copyright/copyright.css
@@ -1,13 +1,20 @@
 .copyright {
+  align-self: end;
   color: #CFCFCF;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
   line-height: 20px;
   margin: 0;
-  padding-top: 100px;
+  padding: 0;
 }
 
 .layout_theme_dark .copyright {
   color: #565656;
+}
+
+@media screen and (max-width: 900px) {
+  .copyright {
+    align-self: center;
+  }
 }
