--- a/src/blocks/heading/_style/heading_style_form-title.css
+++ b/src/blocks/heading/_style/heading_style_form-title.css
@@ -3,6 +3,7 @@
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
+  letter-spacing: normal;
   line-height: 32px;
   max-width: 229px;
 }
